deps/v8/test/message/fail/destructuring-object-private-name.out
*%(basename)s:8: SyntaxError: Unexpected identifier
    const { #x: x } = this;
            ^^
SyntaxError: Unexpected identifier
